--- a/index.html
+++ b/index.html
@@ -1,16 +1,14 @@
-  <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="hu">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="stlye.css">
-    <title>Pályaszerkesztő</title>
-   
-     
-    
+    <link rel="stylesheet" href="stlye.css" />
+    <title>Pálya</title>
   </head>
   <body>
-    <h1>Pályaszerkesztő</h1>
+    <div id="containeer">
+    <h1>Picross</h1>
     <label for="size">Pályaméret:</label>
     <select id="size">
       <option value="5">5x5</option>
@@ -23,5 +21,6 @@
     <button onclick="saveGrid()">Mentés</button>
     <div class="grid-container"><div id="grid"></div></div>
     <script src="program.js"></script>
+    </div>
   </body>
 </html>
